--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/streaming_video_user.styles.css" asp-append-version="true" />
 </head>
+  <script src="~/js/custom.js" asp-append-version="true"></script>
+  <script src="~/js/plugins.js" asp-append-version="true"></script>
+  <script src="~/js/plugins.js" asp-append-version="true"></script>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
