--- a/Views/playfilmController1/Index.cshtml
+++ b/Views/playfilmController1/Index.cshtml
@@ -5,17 +5,22 @@
 }
 <!-- END | Header -->
 
-<div class="hero mv-single-hero">
-
+<div style="padding-top:180px;padding-bottom:80px;height:auto; background:#000000;"> 
+    <div style="padding:50px;text-align:center;">
+            <h3 style="color:white">@ViewBag.MovieName</h3>
+    </div>
+    <div class="container" style="background:#000000;">
+        <div class="row" style="background:#000000;">
+            <video width="320" height="500" controls>
+                <source src="https://firebasestorage.googleapis.com/v0/b/netflix-clone-423a7.appspot.com/o/Video%2FFILM24%20%20.mp4?alt=media&token=f03fa7ac-0aa3-4d4c-b1cb-0ce81651a5c9" type="video/mp4">
+                <source src="movie.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+       
+    </div>
 </div>
-<div class="container">
-		<div class="row">
-					<video width="320" height="500" controls>
-  <source src="https://firebasestorage.googleapis.com/v0/b/netflix-clone-423a7.appspot.com/o/Video%2Fvideo-1645005088.mp4?alt=media&token=fdd29666-a1fb-47e8-892d-faea1fc36bc4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
-		</div></div>
+
 <!-- footer section-->
 <!-- end of footer section-->
 
