--- a/Views/Index/Index.cshtml
+++ b/Views/Index/Index.cshtml
@@ -5,7 +5,7 @@
 	Random rnd = new Random();
 }
 
-<div class="page-single">
+<div class="page-single" style="padding-top:120px">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
