--- a/Views/Index/Profile.cshtml
+++ b/Views/Index/Profile.cshtml
@@ -1,60 +1,59 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Profile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="hero user-hero">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="hero-ct">
-					<ul class="breadcumb">
-						<li class="active"><a href="#">Home</a></li>
-						<li> <span class="ion-ios-arrow-right"></span>Profile</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="hero-ct">
+                    <ul class="breadcumb">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li> <span class="ion-ios-arrow-right"></span>Profile</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="page-single">
-	<div class="container">
-		<div class="row ipad-width">
-			<div class="col-md-3 col-sm-12 col-xs-12">
-				<div class="user-information">
-					<div class="user-img">
-						<img src="images/uploads/user-img.png" alt="">
-					</div>
-					<div class="user-fav">
-						<p>Account Details</p>
-						<ul>
-							<li  class="active"><a asp-action="Profile" asp-controller="Index">Profile</a></li>
-							<li><a asp-action="FavoriteList" asp-controller="Index">Favorite movies</a></li>
-						</ul>
-					</div>
-					<div class="user-fav">
-						<p>Others</p>
-						<ul>
-							<li><a asp-action="Profile" asp-controller="Index">Change password</a></li>
-							<li><a asp-action="Logout" asp-controller="Index">Log out</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-9 col-sm-12 col-xs-12">
-				<div class="form-style-1 user-pro" action="#">
-                    <form action="#" class="user">
+    <div class="container">
+        <div class="row ipad-width">
+            <div class="col-md-3 col-sm-12 col-xs-12">
+                <div class="user-information">
+                    <div class="user-img">
+                        <img src="images/uploads/user-img.png" alt="">
+                    </div>
+                    <div class="user-fav">
+                        <p>Account Details</p>
+                        <ul>
+                            <li class="active"><a asp-action="Profile" asp-controller="Index">Profile</a></li>
+                            <li><a asp-action="FavoriteList" asp-controller="Index">Favorite movies</a></li>
+                        </ul>
+                    </div>
+                    <div class="user-fav">
+                        <p>Others</p>
+                        <ul>
+                            <li><a asp-action="Profile" asp-controller="Index">Change password</a></li>
+                            <li><a asp-action="Logout" asp-controller="Index">Log out</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9 col-sm-12 col-xs-12">
+                <div class="form-style-1 user-pro" action="#">
+                    <form asp-action="ChangeInfo" asp-controller="Index" class="user" method="post">
                         <h4>01. Profile details</h4>
                         <div class="row">
                             <div class="col-md-6 form-it">
                                 <label>Full Name</label>
-                                <input type="text" value="@ViewBag.Name" placeholder="Your Full Name" />
+                                <input type="text" value="@ViewBag.Name" name="name" placeholder="Your Full Name" />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6 form-it">
                                 <label>Age</label>
-                                <input type="text" value="@ViewBag.Age" placeholder="Your Age">
+                                <input type="number" value="@ViewBag.Age" name="age" placeholder="Your Age">
                             </div>
                         </div>
 
@@ -64,45 +63,57 @@
                             </div>
                         </div>
                     </form>
-					 <form action="http://localhost:3001/paymentweb" method="POST">
-        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                data-key="pk_test_51KysBGC4c4me30BTdO6jARHtsFThCnAVcsxOeu9tumGlrOHf1XstZNJaV4UWPLNxIIx4fB4W3Pb6d1kgsszy8FBw0001H8C0ok"
-                data-amount="10"
-                data-name="Web nâng cao"
-                data-description="10$"
-                data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-                data-locale="en"
-                data-label="Pay 10$">
-        </script>
-    </form>
-					<form asp-action="ChangePassword" asp-controller="Index" class="password">
-						<h4>02. Change password</h4>
-						<div class="row">
-							<div class="col-md-6 form-it">
-								<label>Old Password</label>
-								<input type="text" name="OldPassword" placeholder="**********">
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6 form-it">
-								<label>New Password</label>
-								<input type="text" name="NewPassword" placeholder="***************">
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6 form-it">
-								<label>Confirm New Password</label>
-								<input type="text" name="ConfirmNewPassword" placeholder="*************** ">
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-2">
-								<input class="submitPassword" type="submit" value="change">
-							</div>
-						</div>	
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
+                    @{
+                        if (ViewBag.StatusPayment=="1")
+                        {
+                            <p>Your Account is now a Prenium Acoount</p>
+                        }
+                        else
+                        {
+                            <form action="http://localhost:3001/paymentweb/USER1" method="POST">
+                                <input value=@ViewBag.UserId name="id" class="id" hidden/>
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                    data-key="pk_test_51KysBGC4c4me30BTdO6jARHtsFThCnAVcsxOeu9tumGlrOHf1XstZNJaV4UWPLNxIIx4fB4W3Pb6d1kgsszy8FBw0001H8C0ok"
+                                    data-amount="0.1"
+                                    data-name="Web nâng cao"
+                                    data-description="100$"
+                                    data-image="https://res.cloudinary.com/tsoul/image/upload/v1655032276/LTWnc/logo_k4bsdd.png"
+                                    data-locale="en"
+                                    data-label="Pay 100$">
+                                </script>
+                            </form>
+                        }
+                      
+                    }
+                    
+                    <form asp-action="ChangePassword" asp-controller="Index" class="password">
+                        <h4>02. Change password</h4>
+                        <div class="row">
+                            <div class="col-md-6 form-it">
+                                <label>Old Password</label>
+                                <input type="text" name="OldPassword" placeholder="**********">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 form-it">
+                                <label>New Password</label>
+                                <input type="text" name="NewPassword" placeholder="***************">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 form-it">
+                                <label>Confirm New Password</label>
+                                <input type="text" name="ConfirmNewPassword" placeholder="*************** ">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <input class="submitPassword" type="submit" value="change">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
