add factory pattern and Command pattern

--- a/Views/Index/Detail.cshtml
+++ b/Views/Index/Detail.cshtml
@@ -218,7 +218,7 @@ function off() {
                                         <!-- //== -->
                                         <!-- //== -->
                                         <div class="title-hd-sm">
-                                            <h4>Actor</h4>
+                                            <h4>Director</h4>
                                         </div>
                                         <div class="mvcast-item">
                                             @foreach (var item in ViewBag.Actor)
